--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,9 @@ jobs:
         with:
           # Server address of Docker registry. If not set then will default to Docker Hub
           registry: ghcr.io
-      
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+          
       - uses: actions/checkout@v2
       - name: Build and push Docker images
         # You may pin to the exact commit or the version.
