--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_PAT }}
           
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v1.1.1:  
+          
       - uses: actions/checkout@v2
       - name: Build and push Docker images
         # You may pin to the exact commit or the version.
