--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           password: ${{ secrets.GH_PAT }}
           
       - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v1.1.1:  
+        uses: docker/setup-buildx-action@v1.1.1
           
       - uses: actions/checkout@v2
       - name: Build and push Docker images
