--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,5 @@ jobs:
         with:
           tags: |
             "ghcr.io/whereismyjetpack/github-deployment-controller:latest"
+            "ghcr.io/whereismyjetpack/github-deployment-controller:${{ github.ref }}"
           push: true
