--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,15 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_PAT }}
+        
+      - name: Docker Meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ghcr.io/whereismyjetpack/github-deployment-controller
+          tags: |
+            type=sha
+            type=semver,pattern={{version}}
           
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v1.1.1
@@ -41,7 +50,5 @@ jobs:
         # uses: docker/build-push-action@4a531fa5a603bab87dfa56578bd82b28508c9547
         uses: docker/build-push-action@v2.2.2
         with:
-          tags: |
-            "ghcr.io/whereismyjetpack/github-deployment-controller:latest"
-            "ghcr.io/whereismyjetpack/github-deployment-controller:${{ github.ref }}"
+          tags: ${{ steps.meta.output.tags }}
           push: true
