--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,5 +50,5 @@ jobs:
         # uses: docker/build-push-action@4a531fa5a603bab87dfa56578bd82b28508c9547
         uses: docker/build-push-action@v2.2.2
         with:
-          tags: ${{ steps.meta.output.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           push: true
